Add home page and navbar

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .button {
+    @apply inline-block text-sm font-bold text-center capitalize border rounded-full;
+  }
+
+  .button.blue {
+    @apply text-white bg-blue-500 border-blue-500 hover:bg-blue-300 hover:border-blue-300;
+  }
+
+  .button.blue.outlined {
+    @apply text-blue-500 bg-transparent border-blue-500 hover:text-blue-300 hover:border-blue-300;
+  }
+}
